--- a/apps/frontends/webapp/src/styles.css
+++ b/apps/frontends/webapp/src/styles.css
@@ -1,1 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'Bebas Neue';
+  src: url('./assets/fonts/bebas-neue.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+.font-bebas {
+  font-family: 'Bebas Neue', sans-serif;
+}
+
 /* You can add global styles to this file, and also import other style files */
