--- a/apps/frontends/webapp/src/styles.css
+++ b/apps/frontends/webapp/src/styles.css
@@ -2,16 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: 'Bebas Neue';
-  src: url('./assets/fonts/bebas-neue.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
+/* Inter font is loaded via Google Fonts in index.html */
 .font-bebas {
-  font-family: 'Bebas Neue', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 /* You can add global styles to this file, and also import other style files */
